scss ruby > dart

--- a/lib/src/components/fo_data_table_component/fo_data_table_component.scss
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.scss
@@ -1,5 +1,5 @@
-@import '../../../../../../Visurus/Grid/v1/grid';
-@import '../../../../../../Visurus/Grid/v1/theme';
+@import 'package:grid/grid';
+@import 'package:grid/theme';
 
 :host
 {
