--- a/lib/src/components/fo_sidebar_component/fo_sidebar_component.scss
+++ b/lib/src/components/fo_sidebar_component/fo_sidebar_component.scss
@@ -1,6 +1,6 @@
-@import '../../../../../Grid/v1/colors';
-@import '../../../../../Grid/v1/theme';
-@import '../../../../../Grid/v1/grid';
+@import 'package:grid/colors';
+@import 'package:grid/theme';
+@import 'package:grid/grid';
 
 :host
 {
