--- a/lib/src/components/fo_time_picker_component/fo_time_picker_component.scss
+++ b/lib/src/components/fo_time_picker_component/fo_time_picker_component.scss
@@ -1,5 +1,5 @@
-@import '../../../../../../Visurus/Grid/v1/theme';
-@import '../../../../../../Visurus/Grid/v1/colors';
+@import 'package:grid/theme';
+@import 'package:grid/colors';
 
 p.label
 {
