--- a/lib/src/components/fo_image_map_component/fo_image_map_component.scss
+++ b/lib/src/components/fo_image_map_component/fo_image_map_component.scss
@@ -18,25 +18,20 @@
     position: absolute;
     top: 0;
     left: 0;
+    opacity: 0.6;
 
     .shape
     {
-      opacity: 0;
-      -webkit-transition: opacity 200ms ease;
-      -moz-transition: opacity 200ms ease;
-      -o-transition: opacity 200ms ease;
-      transition: opacity 200ms ease;
-
+      visibility: hidden;
       stroke: $color1;
-      stroke-width: 1px;
+      stroke-width: 2;
+      stroke-linejoin: round;
       fill: $color1;
-      fill-opacity: 0.5;
-
     }
 
     .shape.visible
     {
-      opacity: 1;
+      visibility: visible;
     }
   }
 }
