--- a/lib/src/components/fo_select_component/fo_select_component.html
+++ b/lib/src/components/fo_select_component/fo_select_component.html
@@ -19,7 +19,7 @@
             [class.full-width]="fullWidth"
             [disabled]="disabled || options == null || selectionModel == null"
             [buttonText]="selectedModel == null ? nullSelectionButtonText : selectedModel.toString()"
-            [popupMatchInputWidth]="true"
+            [popupMatchInputWidth]="false"
             [options]="options"
             [selection]="selectionModel"
             [(visible)]="visible">
