--- a/lib/src/components/fo_image_map_component/fo_image_map_component.scss
+++ b/lib/src/components/fo_image_map_component/fo_image_map_component.scss
@@ -24,7 +24,7 @@
     {
       visibility: hidden;
       stroke: white;
-      stroke-width: 2px;
+      stroke-width: 1;
       stroke-dasharray: 2;
       stroke-linejoin: round;
       fill: $colorAlert;
