--- a/lib/src/components/fo_multi_select_component/fo_multi_select_component.scss
+++ b/lib/src/components/fo_multi_select_component/fo_multi_select_component.scss
@@ -2,7 +2,19 @@
 {
   font-size: 0.9em;
   color: #888;
-  margin: 0.2rem 0 0.912rem 0;
+  margin: 0.4rem 0 0.912rem 0;
+
+  span
+  {
+    display: inline-block;
+    padding: 0.3em 0.5em;
+    margin: 0.3em 0.2em 0 0.2em;
+    background-color: #ddd;
+  }
+  span:first-child
+  {
+    margin-left: 0;
+  }
 }
 
 ::ng-deep material-dropdown-select.full-width
