--- a/lib/src/components/fo_select_component/fo_select_component.scss
+++ b/lib/src/components/fo_select_component/fo_select_component.scss
@@ -2,41 +2,38 @@
 
 :host
 {
-  margin-bottom: 1rem;
-  display: block;
+    margin-bottom: 1rem;
+    display: block;
 
-  label
-  {
-    width: 100%;
-    margin-bottom: 0.5rem;
-    display: inline-block;
-    font-size: 0.75em;
-    color: #888;
-  }
-
-  material-icon
-  {
-    vertical-align: text-top;
-  }
-
-  div.flex-container
-  {
-    display: flex;
-
-    material-dropdown-select
+    label
     {
-      flex: 0.8;
-    }
-    material-button
-    {
-      flex: 0.2;
+        width: 100%;
+        margin-bottom: 0.5rem;
+        display: inline-block;
+        font-size: 0.75em;
+        color: #888;
     }
 
-    material-dropdown-select.full-width
+    material-icon
     {
-
-      width: 100%;
+        vertical-align: text-top;
     }
 
-  }
+    div.flex-container
+    {
+        display: flex;
+        material-dropdown-select
+        {
+            flex: 0.8;
+        }
+        material-button
+        {
+            flex: 0.2;
+        }
+        material-dropdown-select.full-width
+        {
+            flex: auto;
+            width: 100%;
+        }
+    }
 }
