--- a/lib/src/components/fo_number_input_component/fo_number_input_component.scss
+++ b/lib/src/components/fo_number_input_component/fo_number_input_component.scss
@@ -6,5 +6,8 @@ label
 
 material-button
 {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
 }
