--- a/lib/src/components/fo_multi_select_component/fo_multi_select_component.scss
+++ b/lib/src/components/fo_multi_select_component/fo_multi_select_component.scss
@@ -1,23 +1,21 @@
-.selected-values
+:host
 {
-  font-size: 0.9em;
-  color: #888;
-  margin: 0.4rem 0 0.912rem 0;
+    span.label
+    {
+        width: 100%;
+        margin-bottom: 0.5rem;
+        display: inline-block;
+        font-size: 0.75em;
+        color: #888;
+    }
 
-  span
-  {
-    display: inline-block;
-    padding: 0.3em 0.5em;
-    margin: 0.3em 0.2em 0 0.2em;
-    background-color: #ddd;
-  }
-  span:first-child
-  {
-    margin-left: 0;
-  }
-}
+    .selectedValues
+    {
+      margin-top: 0.3rem;
+    }
 
-::ng-deep material-dropdown-select.full-width
-{
-  width: 100%;
+    ::ng-deep material-dropdown-select.full-width
+    {
+      width: 100%;
+    }
 }
