--- a/lib/src/components/fo_number_input_component/fo_number_input_component.scss
+++ b/lib/src/components/fo_number_input_component/fo_number_input_component.scss
@@ -1,7 +1,9 @@
 label
 {
-  font-size: 0.75em;
-  color: #888;
+    display: block;
+    font-size: 0.75em;
+    color: #888;
+    margin-bottom: 0.3rem;
 }
 
 material-button
