added leadingText attribute to multi-input

--- a/lib/src/components/fo_multi_input_component/fo_multi_input_component.html
+++ b/lib/src/components/fo_multi_input_component/fo_multi_input_component.html
@@ -1,5 +1,7 @@
 <material-input
         label="{{label | phrase}}" floatingLabel
+        [leadingText]="leadingText"
+        [fullWidth]="true"
         [displayBottomPanel]="false"
         (keyup)="onKeyUp($event)"
         [(ngModel)]="inputValue">
