serialized model work

--- a/lib/src/components/fo_modal_component/fo_modal_component.html
+++ b/lib/src/components/fo_modal_component/fo_modal_component.html
@@ -3,6 +3,7 @@
             headered
             [class.fixed-height]="fixedHeight"
             [class.fixed-width]="fixedWidth"
+            [style.max-width]="maxWidth"
             [error]="error | phrase">
         <div class="header" header>
             <h3>
