--- a/lib/src/components/fo_modal_component/fo_modal_component.scss
+++ b/lib/src/components/fo_modal_component/fo_modal_component.scss
@@ -55,7 +55,7 @@ material-dialog.fixed-height
 material-dialog.fixed-width
 {
     width: 90vw;
-    max-width: 1250px;
+//    max-width: 1250px;
 }
 
 .float-right
