--- a/lib/src/components/fo_select_component/fo_select_component.html
+++ b/lib/src/components/fo_select_component/fo_select_component.html
@@ -21,6 +21,7 @@
             [buttonText]="selectedModel == null ? nullSelectionButtonText : selectedModel.toString()"
             [popupMatchInputWidth]="false"
             [options]="options"
+            [componentRenderer]="componentRenderer"
             [selection]="selectionModel"
             [(visible)]="visible">
         <div *ngIf="showSearch" header>
